# PRUEBATECNICA

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env.example  env.production  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/schemas/: __init__.py  health.py  summarize.py
app/api/v1/: __init__.py  health.py  summarize.py
app/core/: __init__.py  constants.py  dependencies.py  exceptions.py
app/middleware/: __init__.py  auth.py  cors.py  error_handler.py  logging.py  rate_limit.py
app/providers/: __init__.py  base.py
app/providers/cache/: __init__.py
app/providers/llm/: __init__.py  fallback.py  gemini.py
app/services/: __init__.py  cache.py  evaluation.py
app/utils/: __init__.py  rate_limiter.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  TESTING.md  TROUBLESHOOTING.md
scripts/: docker-build.sh  docker-deploy.sh
tests/: __init__.py  conftest.py
tests/fixtures/: test_data.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py  test_schemas.py
